// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeacherStudents Testing component render testing TeacherStudents page renders default correctly 1`] = `
Array [
  <div
    className="wrapper"
  >
    <Navbar
      className="teacher-navbar"
      collapseOnSelect={true}
      expand="lg"
      variant="dark"
    >
      <Container
        fluid={false}
      >
        <NavbarBrand
          className="navbar-header"
        >
          classname
        </NavbarBrand>
        <Nav
          className="navbar-btns"
          fill={false}
          justify={false}
        >
          <Button
            active={false}
            className="navbar-btn"
            disabled={false}
            variant="light"
          >
            <Link
              className="navbar-link"
              to={
                Object {
                  "pathname": "/Class/classc/students",
                  "state": Object {
                    "class": Object {
                      "class_code": "classc",
                      "class_name": "classname",
                    },
                    "teacher_id": "teacherid",
                    "token": "token",
                  },
                }
              }
            >
              Students
            </Link>
          </Button>
          <Button
            active={false}
            className="navbar-btn"
            disabled={false}
            variant="light"
          >
            <Link
              className="navbar-link"
              to={
                Object {
                  "pathname": "/Class/classc/taxes",
                  "state": Object {
                    "class": Object {
                      "class_code": "classc",
                      "class_name": "classname",
                    },
                    "teacher_id": "teacherid",
                    "token": "token",
                  },
                }
              }
            >
              Taxes
            </Link>
          </Button>
          <Button
            active={false}
            className="navbar-btn"
            disabled={false}
            variant="light"
          >
            <Link
              className="navbar-link"
              to={
                Object {
                  "pathname": "/Class/classc/store",
                  "state": Object {
                    "class": Object {
                      "class_code": "classc",
                      "class_name": "classname",
                    },
                    "teacher_id": "teacherid",
                    "token": "token",
                  },
                }
              }
            >
              Store
            </Link>
          </Button>
          <Button
            active={false}
            className="navbar-btn"
            disabled={false}
            variant="light"
          >
            <Link
              className="navbar-link"
              to={
                Object {
                  "pathname": "/Class/classc/bank",
                  "state": Object {
                    "class": Object {
                      "class_code": "classc",
                      "class_name": "classname",
                    },
                    "teacher_id": "teacherid",
                    "token": "token",
                  },
                }
              }
            >
              Bank
            </Link>
          </Button>
          <Button
            active={false}
            className="navbar-btn-class-list"
            disabled={false}
            variant="secondary-outline"
          >
            <Link
              className="navbar-link"
              to={
                Object {
                  "pathname": "/Profile/",
                  "state": Object {
                    "role": "Teacher",
                    "token": "token",
                  },
                }
              }
            >
              Class List
            </Link>
          </Button>
        </Nav>
      </Container>
    </Navbar>
    <Container
      className="student-container"
      fluid={false}
    >
      <Row
        className="content-row"
      >
        <Col
          className="student-list-col"
        >
          <h4
            className="student-header"
          >
            Students
          </h4>
          <ListGroup />
          <InputGroup
            className="amount-input"
          >
            <InputGroupText>
              $
            </InputGroupText>
            <FormControl
              defaultValue="0"
              id="amount"
              onChange={[Function]}
            />
          </InputGroup>
          <p />
          <Button
            active={false}
            className="pay-btns"
            disabled={false}
            onClick={[Function]}
            variant="primary"
          >
            Pay Selected Students
          </Button>
          <Button
            active={false}
            className="pay-btns"
            disabled={false}
            onClick={[Function]}
            variant="primary"
          >
            Charge Selected Students
          </Button>
          <Button
            active={false}
            className="delete-btn"
            disabled={false}
            onClick={[Function]}
            variant="primary"
          >
            Delete Selected Students
          </Button>
        </Col>
        <Col>
          <h4
            className="student-header"
          >
            Student Items
          </h4>
        </Col>
      </Row>
    </Container>
  </div>,
]
`;

exports[`TeacherStudents Testing renderItems testing should display selected students items 1`] = `
<ListGroupItem>
  <Row>
    <Col>
      itemname
    </Col>
    <Col
      className="list-balance-col"
    >
      studentname
    </Col>
  </Row>
</ListGroupItem>
`;

exports[`TeacherStudents Testing renderItems testing should not display not selected students 1`] = `undefined`;

exports[`TeacherStudents Testing renderStudents testing should display a selected student 1`] = `
<ListGroupItem
  action={true}
  active={true}
  onClick={[Function]}
>
  <Row>
    <Col>
      studentname
    </Col>
    <Col
      className="list-balance-col"
    >
      Balance: balance
    </Col>
  </Row>
</ListGroupItem>
`;

exports[`TeacherStudents Testing renderStudents testing should display not selected student 1`] = `
<ListGroupItem
  action={true}
  onClick={[Function]}
>
  <Row>
    <Col>
      studentname
    </Col>
    <Col
      className="list-balance-col"
    >
      Balance: balance
    </Col>
  </Row>
</ListGroupItem>
`;
